changed the file/function names to better match what is going on

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export(earthcon)
 export(gc2gd)
 export(gd2gc)
 export(geodGBL)
+export(lla2xyz)
 export(llenu)
-export(llh2xyz)
 export(radcur)
 export(rearth)
 export(wgs84)
-export(xyz2llh)
+export(xyz2lla)
